* Changed all names to use the "name" type reference.
* Added a "maximum" of 65535 to the "version" field.
* Changed the "command" type to "array" and removing the intermediary "fields"
  property. There's no minimum size because, in theory, a message may contain
  zero bytes.
* Added a "name" to the "bitField" type.
* Added '"uniqueItems": true' to "command".
* Added '"uniqueItems": true' to "ranges".
* Added a new "pdEnvelope" type.
* Added a new "list" type that represents a list of any valid non-list
  field type.
* Removed the requirement of having "name" for some of the types so they can
  also be used in lists.
* Suffixed all the types with "Type" so that naming is consistent. These aren't
  the words that will be used when writing a schema and they don't have to be
  the same as the constant names, eg. "uint8" or "string" or "list".
* Added a "compoundType" type so that we don't have to make a special type for
  all possibilities. For example, the list of 3-field items returned
  in SLOT_INFO. These compound types are only supported in the list type,
  "listType", because a field is only used in "commandType".
* Added 12 examples, most with lists of compound (packed) types.
* Think of "listType" as a holder for a "packed" list of things, where each
  "thing" can be a simple or compound type.

v2:
* Factored all the types into a "oneOf" so that it can be referenced from
  "compoundType", "listType", and "fieldType".
* Changed "boundedIntegerType" to "integerType" and "boundedStringType"
  to "stringType".
* Removed "name" from the "required" list of "labeledIntegerType"
  and "listType".
* Changed some descriptions.
* Changed "upper" and "lower" in "rangeType" to "maximum" and "minimum",
  respectively, for consistency with JSON schema naming conventions.
* Added an optional "length" property to "pdEnvelope".

v3:
* Removed "fieldType" and instead made "commandType" be a collection
  of "oneOfType".